--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_height="100dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
-        android:text="Monday"
+        android:text="ΔΕΥΤΕΡΑ"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,7 +23,8 @@
         android:layout_height="100dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="30dp"
-        android:text="Tuesday"
+        android:textColor="@color/white"
+        android:text="ΤΡΙΤΗ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +34,8 @@
         android:layout_height="100dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
-        android:text="Wednesday"
+        android:textColor="@color/white"
+        android:text="ΤΕΤΑΡΤΗ"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Monday" />
 
@@ -42,7 +45,8 @@
         android:layout_height="100dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="30dp"
-        android:text="Thursday"
+        android:textColor="@color/white"
+        android:text="ΠΕΜΠΤΗ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Tuesday" />
 
@@ -52,7 +56,8 @@
         android:layout_height="100dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
-        android:text="Friday"
+        android:textColor="@color/white"
+        android:text="ΠΑΡΑΣΚΕΥΗ"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Wednesday" />
 
@@ -62,7 +67,8 @@
         android:layout_height="100dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="30dp"
-        android:text="Saturday"
+        android:textColor="@color/white"
+        android:text="ΣΑΒΒΑΤΟ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Thursday" />
 
@@ -71,7 +77,8 @@
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:layout_marginTop="40dp"
-        android:text="Sunday"
+        android:textColor="@color/white"
+        android:text="ΚΥΡΙΑΚΗ"
         app:layout_constraintEnd_toStartOf="@+id/Saturday"
         app:layout_constraintStart_toEndOf="@+id/Friday"
         app:layout_constraintTop_toBottomOf="@+id/Friday" />
