--- a/app/src/main/res/layout/activity_quests.xml
+++ b/app/src/main/res/layout/activity_quests.xml
@@ -10,13 +10,16 @@
         android:id="@+id/checkBox"
         android:layout_width="300dp"
         android:layout_height="75dp"
-        android:layout_marginTop="36dp"
-        android:text="Ανακύκλωσες τα πλαστικά;"
+        android:layout_marginTop="20dp"
+        android:text="Ανακύκλωσες τα Πλαστικά;"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/appcolour"
+        android:textColor="@color/white"
+        />
 
     <CheckBox
         android:id="@+id/checkBox3"
@@ -27,7 +30,9 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
+        android:background="@color/appcolour"
+        android:textColor="@color/white" />
 
     <CheckBox
         android:id="@+id/checkBox4"
@@ -38,18 +43,22 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox3"
+        android:background="@color/appcolour"
+        android:textColor="@color/white" />
 
     <CheckBox
         android:id="@+id/checkBox5"
         android:layout_width="300dp"
         android:layout_height="75dp"
         android:layout_marginTop="5dp"
-        android:text="Πότισες τα φυτά σου;"
+        android:text="Ανακύκλωσες τα Χαρτικά;"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox4"
+        android:background="@color/appcolour"
+        android:textColor="@color/white" />
 
     <CheckBox
         android:id="@+id/checkBox6"
@@ -60,18 +69,22 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox5"
+        android:background="@color/appcolour"
+        android:textColor="@color/white" />
 
     <CheckBox
         android:id="@+id/checkBox2"
         android:layout_width="300dp"
         android:layout_height="75dp"
         android:layout_marginTop="5dp"
-        android:text="Ανακύκλωσες τα γυάλινα;"
+        android:text="Ανακύκλωσες τα Γυάλινα;"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox"
+        android:background="@color/appcolour"
+        android:textColor="@color/white"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -81,6 +94,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox6"
+        android:textColor="@color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
