--- a/app/src/main/res/layout/activity_quests.xml
+++ b/app/src/main/res/layout/activity_quests.xml
@@ -95,6 +95,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox6"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
