--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="appcolour">#7CB342</color>
     <color name="haha">#5E35B1</color>
+    <color name="nero">#039BE5</color>
 </resources>
