--- a/app/src/main/res/layout/activity_quests.xml
+++ b/app/src/main/res/layout/activity_quests.xml
@@ -88,15 +88,17 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="300dp"
+        android:layout_height="120dp"
+        android:max="102"
+        android:progress="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox6"
         android:textColor="@color/white"
-        
+
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
